[gd_scene load_steps=2 format=2]

[ext_resource path="res://castagne/editor/submenus/music/CEMusicSettings.gd" type="Script" id=1]

[node name="MusicSettings" type="Control"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Control" parent="."]
anchor_right = 1.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Title"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.521569 )

[node name="Label" type="Label" parent="Title"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Music Settings"
align = 1
valign = 1

[node name="LeftPanel" type="VBoxContainer" parent="."]
anchor_right = 0.4
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 40.0
margin_bottom = -8.0

[node name="LabelChar" type="Label" parent="LeftPanel"]
margin_right = 401.0
margin_bottom = 14.0
text = "Track List:"
align = 1

[node name="MusicList" type="ItemList" parent="LeftPanel"]
margin_top = 18.0
margin_right = 401.0
margin_bottom = 464.0
size_flags_vertical = 3
items = [ "Item 0", null, false, "Item 1", null, false, "Item 2", null, false, "Item 3", null, false, "Item 4", null, false, "Item 5", null, false, "Item 6", null, false, "Item 7", null, false, "Item 8", null, false, "Item 9", null, false, "Item 10", null, false, "Item 11", null, false, "Item 12", null, false, "Item 13", null, false, "Item 14", null, false, "Item 15", null, false, "Item 16", null, false, "Item 17", null, false, "Item 18", null, false, "Item 19", null, false, "Item 20", null, false, "Item 21", null, false ]

[node name="Controls" type="HBoxContainer" parent="LeftPanel"]
margin_top = 468.0
margin_right = 401.0
margin_bottom = 492.0
rect_min_size = Vector2( 0, 24 )

[node name="MusicAdd" type="Button" parent="LeftPanel/Controls"]
margin_right = 247.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Add"

[node name="MusicRemove" type="Button" parent="LeftPanel/Controls"]
margin_left = 251.0
margin_right = 315.0
margin_bottom = 24.0
text = "Remove"

[node name="MusicUp" type="Button" parent="LeftPanel/Controls"]
margin_left = 319.0
margin_right = 349.0
margin_bottom = 24.0
text = "Up"

[node name="MusicDown" type="Button" parent="LeftPanel/Controls"]
margin_left = 353.0
margin_right = 401.0
margin_bottom = 24.0
text = "Down"

[node name="HSeparator2" type="HSeparator" parent="LeftPanel"]
margin_top = 496.0
margin_right = 401.0
margin_bottom = 500.0

[node name="WindowControls" type="HBoxContainer" parent="LeftPanel"]
margin_top = 504.0
margin_right = 401.0
margin_bottom = 528.0
rect_min_size = Vector2( 0, 24 )

[node name="Confirm" type="Button" parent="LeftPanel/WindowControls"]
margin_right = 343.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Confirm"

[node name="Cancel" type="Button" parent="LeftPanel/WindowControls"]
margin_left = 347.0
margin_right = 401.0
margin_bottom = 24.0
text = "Cancel"

[node name="MusicInfo" type="VBoxContainer" parent="."]
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 40.0
margin_right = -8.0
margin_bottom = -8.0

[node name="Title" type="Label" parent="MusicInfo"]
margin_right = 598.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
text = "Track #X"
align = 1
valign = 1

[node name="Filepath" type="HBoxContainer" parent="MusicInfo"]
margin_top = 28.0
margin_right = 598.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="MusicInfo/Filepath"]
margin_top = 5.0
margin_right = 123.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "Filepath:"
align = 1

[node name="FilepathEdit" type="LineEdit" parent="MusicInfo/Filepath"]
margin_left = 127.0
margin_right = 539.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "res://"

[node name="FilepathReload" type="Button" parent="MusicInfo/Filepath"]
margin_left = 543.0
margin_right = 598.0
margin_bottom = 24.0
text = "Reload"

[node name="FilepathFeedback" type="Label" parent="MusicInfo"]
margin_top = 56.0
margin_right = 598.0
margin_bottom = 70.0
text = "File not found, please check then press reload."
align = 1

[node name="Name" type="HBoxContainer" parent="MusicInfo"]
margin_top = 74.0
margin_right = 598.0
margin_bottom = 98.0

[node name="Label" type="Label" parent="MusicInfo/Name"]
margin_top = 5.0
margin_right = 137.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "Name"
align = 1

[node name="NameEdit" type="LineEdit" parent="MusicInfo/Name"]
margin_left = 141.0
margin_right = 598.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="MusicInfo"]
margin_top = 102.0
margin_right = 598.0
margin_bottom = 126.0
rect_min_size = Vector2( 0, 24 )

[node name="Title2" type="Label" parent="MusicInfo"]
margin_top = 130.0
margin_right = 598.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 24 )
text = "Track Setup"
align = 1
valign = 1

[node name="MusicControls" type="HBoxContainer" parent="MusicInfo"]
margin_top = 158.0
margin_right = 598.0
margin_bottom = 178.0
alignment = 1

[node name="MusicPlay" type="Button" parent="MusicInfo/MusicControls"]
margin_left = 256.0
margin_right = 294.0
margin_bottom = 20.0
toggle_mode = true
text = "Play"

[node name="MusicLoop" type="Button" parent="MusicInfo/MusicControls"]
margin_left = 298.0
margin_right = 341.0
margin_bottom = 20.0
toggle_mode = true
pressed = true
text = "Loop"

[node name="MusicLabels" type="HBoxContainer" parent="MusicInfo"]
margin_top = 182.0
margin_right = 598.0
margin_bottom = 196.0
alignment = 1

[node name="LabelDuration" type="Label" parent="MusicInfo/MusicLabels"]
margin_right = 293.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Duration: 0.000s"
align = 2

[node name="VSeparator" type="VSeparator" parent="MusicInfo/MusicLabels"]
margin_left = 297.0
margin_right = 301.0
margin_bottom = 14.0

[node name="LabelCurrent" type="Label" parent="MusicInfo/MusicLabels"]
margin_left = 305.0
margin_right = 598.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Current: 0.000s"

[node name="PlaySlider" type="HSlider" parent="MusicInfo"]
margin_top = 200.0
margin_right = 598.0
margin_bottom = 216.0
step = 0.001
editable = false
scrollable = false

[node name="LoopStart" type="HBoxContainer" parent="MusicInfo"]
margin_top = 220.0
margin_right = 598.0
margin_bottom = 244.0
alignment = 1

[node name="Label" type="Label" parent="MusicInfo/LoopStart"]
margin_top = 5.0
margin_right = 236.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "Loop Start :  "
align = 2

[node name="LoopStartTime" type="SpinBox" parent="MusicInfo/LoopStart"]
margin_left = 240.0
margin_right = 314.0
margin_bottom = 24.0
step = 0.001
allow_greater = true

[node name="TestLoopStart" type="Button" parent="MusicInfo/LoopStart"]
margin_left = 318.0
margin_right = 357.0
margin_bottom = 24.0
text = "Test"

[node name="Control" type="Control" parent="MusicInfo/LoopStart"]
margin_left = 361.0
margin_right = 598.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="LoopEnd" type="HBoxContainer" parent="MusicInfo"]
margin_top = 248.0
margin_right = 598.0
margin_bottom = 272.0
alignment = 1

[node name="Label" type="Label" parent="MusicInfo/LoopEnd"]
margin_top = 5.0
margin_right = 236.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "Loop End :  "
align = 2

[node name="LoopEndTime" type="SpinBox" parent="MusicInfo/LoopEnd"]
margin_left = 240.0
margin_right = 314.0
margin_bottom = 24.0
step = 0.001
allow_greater = true

[node name="TestLoopEnd" type="Button" parent="MusicInfo/LoopEnd"]
margin_left = 318.0
margin_right = 357.0
margin_bottom = 24.0
text = "Test"

[node name="Control" type="Control" parent="MusicInfo/LoopEnd"]
margin_left = 361.0
margin_right = 598.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="AudioVolume" type="HBoxContainer" parent="MusicInfo"]
margin_top = 276.0
margin_right = 598.0
margin_bottom = 300.0
alignment = 1

[node name="Label" type="Label" parent="MusicInfo/AudioVolume"]
margin_top = 5.0
margin_right = 258.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "Volume Adjustment: "
align = 2

[node name="AudioVolumeValue" type="SpinBox" parent="MusicInfo/AudioVolume"]
margin_left = 262.0
margin_right = 336.0
margin_bottom = 24.0
step = 0.001
allow_greater = true
allow_lesser = true

[node name="Control" type="Control" parent="MusicInfo/AudioVolume"]
margin_left = 340.0
margin_right = 598.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="Audio" type="AudioStreamPlayer" parent="MusicInfo"]

[connection signal="item_selected" from="LeftPanel/MusicList" to="." method="_on_MusicList_item_selected"]
[connection signal="pressed" from="LeftPanel/Controls/MusicAdd" to="." method="_on_MusicAdd_pressed"]
[connection signal="pressed" from="LeftPanel/Controls/MusicRemove" to="." method="_on_MusicRemove_pressed"]
[connection signal="pressed" from="LeftPanel/Controls/MusicUp" to="." method="_on_MusicUp_pressed"]
[connection signal="pressed" from="LeftPanel/Controls/MusicDown" to="." method="_on_MusicDown_pressed"]
[connection signal="pressed" from="LeftPanel/WindowControls/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="LeftPanel/WindowControls/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="text_changed" from="MusicInfo/Filepath/FilepathEdit" to="." method="_on_FilepathEdit_text_changed"]
[connection signal="pressed" from="MusicInfo/Filepath/FilepathReload" to="." method="_on_FilepathReload_pressed"]
[connection signal="text_changed" from="MusicInfo/Name/NameEdit" to="." method="_on_NameEdit_text_changed"]
[connection signal="toggled" from="MusicInfo/MusicControls/MusicPlay" to="." method="_on_MusicPlay_toggled"]
[connection signal="toggled" from="MusicInfo/MusicControls/MusicLoop" to="." method="_on_MusicLoop_toggled"]
[connection signal="drag_ended" from="MusicInfo/PlaySlider" to="." method="_on_PlaySlider_drag_ended"]
[connection signal="drag_started" from="MusicInfo/PlaySlider" to="." method="_on_PlaySlider_drag_started"]
[connection signal="value_changed" from="MusicInfo/LoopStart/LoopStartTime" to="." method="_on_LoopStartTime_value_changed"]
[connection signal="pressed" from="MusicInfo/LoopStart/TestLoopStart" to="." method="_on_TestLoopStart_pressed"]
[connection signal="value_changed" from="MusicInfo/LoopEnd/LoopEndTime" to="." method="_on_LoopEndTime_value_changed"]
[connection signal="pressed" from="MusicInfo/LoopEnd/TestLoopEnd" to="." method="_on_TestLoopEnd_pressed"]
[connection signal="value_changed" from="MusicInfo/AudioVolume/AudioVolumeValue" to="." method="_on_AudioVolumeValue_value_changed"]
